--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Hide number input arrows */
+input.no-spinner::-webkit-outer-spin-button,
+input.no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input.no-spinner {
+  -moz-appearance: textfield; /* Firefox */
+}
